# jmoona-cli

./: .gitignore  Dockerfile  README.md  install.ps1  install.sh  pyproject.toml  windows_fix_summary.md
ext_referer/: manifest.json  rules.json
ext_referer/_metadata/generated_indexed_rulesets/: _ruleset1
jmoona/: app.py  art.py  cli.py  config.py  downloader.py  extractor.py  language.py  player.py  providers.py  storage.py  subtitles.py  tmdb.py  ui.py
tests/: test_cli.py  test_playback.py  test_storage.py
