[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jmoona-cli"
version = "1.0.0"
description = "Films & séries du monde en streaming depuis le terminal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["streaming", "films", "séries", "mpv", "cli", "terminal"]
dependencies = [
    # Core HTTP / parsing
    "requests>=2.28.0",
    # Browser automation (Selenium + undetected-chromedriver for CF bypass)
    "selenium>=4.9.0",
    "undetected-chromedriver>=3.5.0",
    # Headless display on Linux (not needed on macOS/Windows)
    "pyvirtualdisplay>=3.0; sys_platform=='linux'",
    # Anti-Cloudflare HTTP (curl_cffi impersonation)
    "curl-cffi>=0.6.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
jmoona = "jmoona.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/jmoona-cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["jmoona*"]

[tool.setuptools.package-data]
jmoona = ["*.py"]
